# SonicFlow

./: Featurelist_Marketing_Variants.docx  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: fft.js  help.html  index.html  main.js  styles.css  ucs_data.js
src-tauri/: Cargo.toml  tauri.conf.json  test_drag.rs  test_menu.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  riff_meta.rs  scanner.rs  ucs.rs
