[package]
name = "sonic-flow"
version = "1.0.6"
description = "SonicFlow – Sound Effect Database"
authors = ["Antigravity"]
edition = "2021"

[lib]
name = "audio_lookup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
lofty = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-drag = "2.1.0"
tauri-plugin-dialog = "2"
quick-xml = "0.37"
reqwest = { version = "0.12", features = ["json"] }
